# hse-haskell-2021-homework

./: Main.hs  README.md  Task1_Lambda.txt  Task2_WeekDays.hs  Task3_Nat.hs  Task6_Split.hs  Task7_Monoid.hs  Task8_Fix.hs  Tasks4_5_Tree.hs  homework.cabal
.github/workflows/: haskell.yml
Unit1/: Task1_WeekDays.hs
