cabal-version: 2.2

name: homework
version: 2021

test-suite homework
  build-depends: base, tasty, tasty-hunit, tasty-discover, tasty-quickcheck
  default-extensions: EmptyDataDeriving LambdaCase TemplateHaskell
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: Task2_WeekDays
  type: exitcode-stdio-1.0
